Revision history for Net-XMPP2

0.06
         - implemented iq auth (XEP-0078)
         - fixed some bugs and improved the API a bit
           (in compatible ways)

0.05 Fri Jul 27 17:45:16 CEST 2007
         - fixed destructor problem in disco
         - disco extension now supports multiple identities
         - added some unit tests!!!11
         - improved error reporting a bit of internal exceptions
         - fixed a bug where empty passwords didn't work
         - typo bugfix in Net::XMPP2::Ext::Registration::submit_form
         - lots of documentation bugfixes and also added some
           more useful examples to the synopsises.
         - fixed a bug with enabling and disabling multiple features
           with enable_feature (as Ext::OOB does).

0.04 Thu Jul 26 20:41:57 CEST 2007
         - actually added event send_stanza_data after documenting it
         - added samples/simple_register_example
         - fixed some bugs in Net::XMPP2::Ext::Disco
         - now really added support for in band registration (XEP-0077)
         - added support for out of band transfers (XEP-0066)

0.03 Wed Jul 25 12:04:06 CEST 2007
         - fundamentally changed how events work, it's now less
           errorprone for the programmer (you don't have to return
           a true value now all the time and can call $self->unreg_me
           for unregistering a callback).
           Because of this change send_*_hook and contact_did_* events
           have changed their arguments.
         - implemented SAX event generator for easier integration
           with other XML libraries and generation of DOM.
         - added the possibility to completly restore the original
           XML data from a Net::XMPP2::Node.
         - implemented the component protocol to establish a component
           stream with a server.
         - reordered events a bit so that session_ready comes after
           roster retrieval (when it is retrieved)